--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -10,3 +10,6 @@ dependencies:
 - name: jx-spring-boot
   repository: http://jenkins-x-chartmuseum:8080
   version: 0.0.8
+- name: jx-spring-boot2
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.1
